add: the writing endpoints and separate the reading and writing usecases and routing
